# plantie-backend

./: .gitignore  README.md  pyproject.toml
app/: README.md  main.py
app/data/: data_loader.py
app/model/: model_loader.py
app/plant_disease_classification/: plant_disease_model.pth  train_model.ipynb
app/routers/: predict.py
app/utils/: class_names.py  constants.py  images.py  managements.py  symptoms.py  treatment.py
plant_disease_classification/: data_balancing.ipynb  train_model.ipynb
